--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="post__text">Placeat libero ipsa nobis ipsum quibusdam quas harum ut. Distinctio minima iusto. Ad ad maiores et sint voluptate recusandae architecto. Et nihil ullam aut alias.</div>
-            <div class="post__image">
+             <div class="post__image">
                 <img src="https://unsplash.it/600/300?image=171" alt="">
             </div>
             <div class="post__footer">
@@ -47,7 +47,7 @@
             </div>
         </div> -->
 
-    </div>
+    </div> -->
 
 
     <script src="main.js"></script>
